mais algumas alteraçõeszinhas

--- a/index.html
+++ b/index.html
@@ -35,15 +35,32 @@
     
     </section>
 
-    <section class="conheca-o-hotel">
+    <section class="Cardapio">
         <img src="img/Boli.gif" alt="">
-    <h1>Cardápio do Dia </h1>
-    <h3>Aproveite o Cardapio do dia </h3>
-    <p>Todos os dias, comidas diferentes entraram no cardapio do dia em promoção aqui na página inicial ^^</p>
+    <h1>Cardápio da Semana </h1>
+    <h3>Aproveite o Cardapio da Semana </h3>
+    <p>Todas as Semanas, comidas diferentes entraram no cardapio da Semana em promoção aqui na página inicial ^^</p>
 
 
 </section>
-</div>
+
+<section class="Duvidas">
+    <img src="img/Duvidas.png" alt="">
+<h1>Tem duvidas ??</h1>
+<p>Tens duvidas ?? tire suas duvidas na central de ajuda da Shoyo's Shokuji!!!^^</p>
+<a class="btn2" href="duvidas.html">Clicando Aqui</a>
+
+
+</section>
+
+
+
+
+
+
+
+
+
 </div>
 
 <footer>
