agora foi , eu acho kk

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h3>Seja Bem-Vindo ao Site do Shoyo's Shokuji</h3>
     <p>Aproveite as comidas mais kawaiis e oishís, compre, coma ao máximo e não deixe pra depois <br> 
     Arigato Gozaimasu ^^</p>
-    <img src="img/Kawaii.gif" alt="kawaii">
+    <img src="img/Bemvindo.gif" alt="">
     <a class="btn" href="cardapio.html">Compre Aqui</a>
     
     
