cardapiozinho agora deu ^^

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     
 </header>
 
+
+
 <section class="Meiozin2">
     <div class="Min">
     <h1>Shoyo's Shokuji</h1>
@@ -40,7 +42,25 @@
     <h1>Cardápio da Semana </h1>
     <h3>Aproveite o Cardapio da Semana </h3>
     <p>Todas as Semanas, comidas diferentes entraram no cardapio da Semana em promoção aqui na página inicial ^^</p>
+    <div class="Comida">
+    <img src="img/ComidaDorayaki.jpg" alt="Dorayaki">
+    <h1>Dorayaki</h1>
+    <p>Aproveite Dorayaki que essa semana esta em promoção, de R$15 reais para apenas R$10 reais ^^
+        <br>
+        (Recheio a sua escolha)
+    </p>
+    <a class="btn3" href="cardapio.html">Compre Aqui</a>
+    </div>
 
+    <div class="bebida">
+    <img src="img/ChadeBolhas.jpg" alt="ChadeBolhas">
+    <h1>Cha de Bolhas</h1>
+    <p>Aproveite o Cha de bolhas que esta semana esta em promoção , de R$12 reais por apenas R$9 reais ^^
+        <br>
+        (Sabor a sua escolha)
+    </p>
+    <a class="btn4" href="cardapio.html">Compre Aqui</a>
+</div>
 
 </section>
 
