--- a/cardapio.html
+++ b/cardapio.html
@@ -14,7 +14,7 @@
         
 
     <header>
-        <img class="Logo" src="img/Saturno-removebg-preview.png" alt="Simbolo"> 
+        <img class="Logo" src="img/Logo2.jpg" alt="Simbolo"> 
  
     <nav>
 
@@ -38,6 +38,24 @@
             <img src="img/gifTomandoChaKawaii.gif" alt="">
     </section>
 
+    <script>
+        function typeWriter(elemento) {
+          const textoArray = elemento.innerHTML.split('');
+          elemento.innerHTML = '';
+          textoArray.forEach((letra, i) => {
+            setTimeout(() => elemento.innerHTML += letra, 75 * i);
+          });
+        }
+  
+        const titulo = document.querySelector('h3');
+        typeWriter(titulo);
+  
+        typeWriter(document.querySelector('p'))
+
+  
+  
+  
+      </script>
 
 
     <section class="Cardapio">
@@ -48,7 +66,7 @@
 
     <img src="img/ComendoKawaiiGif.gif" alt="">
 
-    
+
 
     <div class="Divizinha"></div>
 
