--- a/encomendar.html
+++ b/encomendar.html
@@ -5,15 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoyo's Shokují</title>
     <link rel="stylesheet" href="encomendar.css">
-    <style>
-        .mySlides {display:none;}
-        </style>
 </head>
 <body>
     <div class="Meiozin">
     
     <header>
-        <img class="Logo" src="img/Saturno-removebg-preview.png" alt="Simbolo"> 
+        <img class="Logo" src="img/Logo3.jpg
+        " alt="Simbolo"> 
  
     <nav>
 
